force-app/main/default/objects/CF_Call_Evaluation__c/CF_Call_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Call Evaluation</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Call Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>