force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Agent__c.field-meta.xml
<CustomField>
    <fullName>CF_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Call Evaluations</relationshipLabel>
    <relationshipName>Call_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>