force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>CF_AI_Summary__c</fullName>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>