force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Applicable_Criteria_Count__c.field-meta.xml
<CustomField>
    <fullName>CF_Applicable_Criteria_Count__c</fullName>
    <description>Number of criteria that actually applied to the call.</description>
    <label>Applicable Criteria Count</label>
    <summaryFilterItems>
        <field>CF_Evaluation_Result__c.CF_Applicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CF_Evaluation_Result__c.CF_Call_Evaluation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>