force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_Date__c</fullName>
    <label>Evaluation Date</label>
    <type>DateTime</type>
</CustomField>