force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Evaluation_JSON__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_JSON__c</fullName>
    <label>Evaluation JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>