force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Evaluation_Template__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Template</label>
    <referenceTo>CF_Evaluation_Template__c</referenceTo>
    <relationshipLabel>Call Evaluations</relationshipLabel>
    <relationshipName>Call_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>