force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Not_Applicable_Count__c.field-meta.xml
<CustomField>
    <fullName>CF_Not_Applicable_Count__c</fullName>
    <label>Not Applicable Count</label>
    <summaryFilterItems>
        <field>CF_Evaluation_Result__c.CF_Applicable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CF_Evaluation_Result__c.CF_Call_Evaluation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>