force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Percent_Score__c.field-meta.xml
<CustomField>
    <fullName>CF_Percent_Score__c</fullName>
    <description>Final normalized score: earned points divided by applicable points.</description>
    <formula>IF(
  CF_Applicable_Points__c &gt; 0,
  CF_Score__c / CF_Applicable_Points__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>