force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Score__c.field-meta.xml
<CustomField>
    <fullName>CF_Score__c</fullName>
    <description>Total earned points across all child evaluation results.</description>
    <label>Score</label>
    <summarizedField>CF_Evaluation_Result__c.CF_Score__c</summarizedField>
    <summaryForeignKey>CF_Evaluation_Result__c.CF_Call_Evaluation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>