force-app/main/default/objects/CF_Call_Evaluation__c/fields/CF_Transcript__c.field-meta.xml
<CustomField>
    <fullName>CF_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transcript</label>
    <referenceTo>CF_Call_Transcript__c</referenceTo>
    <relationshipLabel>Call Evaluations</relationshipLabel>
    <relationshipName>Call_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>