force-app/main/default/objects/CF_Call_Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CF_AI_Summary__c</columns>
    <columns>CF_Transcript__c</columns>
    <columns>CF_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>